--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "{add your homepage here}",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.1",
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.1",
     "@testing-library/user-event": "^12.2.0",
@@ -17,12 +18,13 @@
     "axios": "^0.21.0",
     "gh-pages": "^3.1.0",
     "lodash": "^4.17.20",
+    "node-sass": "^4.14.1",
     "react": "^17.0.1",
+    "react-bottom-scroll-listener": "^4.1.1",
     "react-dom": "^17.0.1",
-    "react-lodash": "^0.1.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.0",
-    "typescript": "^4.0.5",
+    "react-scripts": "4.0.1",
+    "typescript": "^4.1.2",
     "uuid": "^8.3.1",
     "web-vitals": "^0.2.4"
   },
